[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastly"
version = "1.0.0"
authors = [{ name = "Fastly", email = "oss@fastly.com" }]
description = "A Python Fastly API client library"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fastly/fastly-py"
"Bug Tracker" = "https://github.com/fastly/fastly-py/issues"
